--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
@@ -16,6 +17,7 @@
     "express": "^4.18.2",
     "jsdom": "^23.2.0",
     "juice": "^10.0.0",
+    "kubo-rpc-client": "^3.0.3",
     "multer": "^1.4.5-lts.1",
     "nedb": "^1.8.0",
     "path": "^0.12.7",
